--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Hello World</h1>
 
+<br>
+<%= @coins %>
 <button type="button" class="btn btn-danger">Danger</button>
