--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Hello World</h1>
 
 <br>
-<%= @coins %>
-<button type="button" class="btn btn-danger">Danger</button>
+<% @coins %>
+
+<% for x in @coins %>
+  <% for coin in @my_coins %>
+    <% if coin == x["symbol"] %> 
+      <%= x["name"] %>: $<%= x["price_usd"] %><br>
+      Rank: <%= x["rank"] %><br><br>
+    <% end %>
+  <% end %>
+<% end %>
