--- a/app/views/home/lookup.html.erb
+++ b/app/views/home/lookup.html.erb
@@ -8,4 +8,12 @@
 
 <br><br>
 
-<%= @symbol %>
+
+<% if @symbol %>
+  <% for x in @lookup_coin %>
+    <% if @symbol == x["symbol"] %> 
+      <%= x["name"] %>: $<%= x["price_usd"] %><br>
+      Rank: <%= x["rank"] %><br><br>  
+    <% end %>
+  <% end %>
+<% end %>
