--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
   <body>
 
  <%= render 'home/navbar' %>
- 
+
 <div class="container">
+ <%= render 'home/flash' %>  
    <%= yield %>
 </div>
    
