--- a/app/views/cryptos/index.html.erb
+++ b/app/views/cryptos/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Cryptos</h1>
 
 <table>
@@ -15,6 +13,7 @@
 
   <tbody>
     <% @cryptos.each do |crypto| %>
+    <%if crypto.user_id == current_user.id %>
       <tr>
         <td><%= crypto.symbol %></td>
         <td><%= crypto.user_id %></td>
@@ -24,6 +23,7 @@
         <td><%= link_to 'Edit', edit_crypto_path(crypto) %></td>
         <td><%= link_to 'Destroy', crypto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
