--- a/app/views/cryptos/index.html.erb
+++ b/app/views/cryptos/index.html.erb
@@ -1,27 +1,35 @@
 <h1>Cryptos</h1>
 
-<table>
+<table class="table table-striped table-bordered table-hover">
   <thead>
     <tr>
+      <th>Name</th>
+      <th>Current Price</th> 
+      <th>Total Value</th> 
       <th>Symbol</th>
-      <th>User</th>
       <th>Cost per</th>
       <th>Amount owned</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @cryptos.each do |crypto| %>
-    <%if crypto.user_id == current_user.id %>
-      <tr>
+       <% @cryptos.each do |crypto| %>
+        <%if crypto.user_id == current_user.id %>
+          <% if crypto.symbol %>
+              <% crypto.symbol = crypto.symbol.upcase %> 
+          <% end %>
+          <tr>
+          <% for x in @lookup_crypto %>      
+              <% if crypto.symbol == x["symbol"] %> 
+                <td><%= link_to x["name"], crypto %></td>  
+                <td>$<%= x["price_usd"] %></td>  
+                <td>$<%= x["price_usd"].to_d * crypto.amount_owned %></td>     
+              <% end %>
+        <% end %>
+
         <td><%= crypto.symbol %></td>
-        <td><%= crypto.user_id %></td>
-        <td><%= crypto.cost_per %></td>
+        <td>$<%= crypto.cost_per %></td>
         <td><%= crypto.amount_owned %></td>
-        <td><%= link_to 'Show', crypto %></td>
-        <td><%= link_to 'Edit', edit_crypto_path(crypto) %></td>
-        <td><%= link_to 'Destroy', crypto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
       <% end %>
     <% end %>
@@ -30,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Crypto', new_crypto_path %>
+<%= link_to 'New Crypto', new_crypto_path, class: "btn btn-default" %>
