--- a/app/views/cryptos/show.html.erb
+++ b/app/views/cryptos/show.html.erb
@@ -21,4 +21,5 @@
 </p>
 
 <%= link_to 'Edit', edit_crypto_path(@crypto) %> |
-<%= link_to 'Back', cryptos_path %>
+<%= link_to 'Back', cryptos_path %> |
+<%= link_to 'Destroy', crypto_path(@crypto), method: :delete, data: { confirm: 'Are you sure?' } %> |
