--- a/app/views/cryptos/index.html.erb
+++ b/app/views/cryptos/index.html.erb
@@ -1,14 +1,19 @@
-<h1>Cryptos</h1>
-
+<h2>Cryptocurrencies</h2>
+<br>
 <table class="table table-striped table-bordered table-hover">
   <thead>
     <tr>
       <th>Name</th>
       <th>Current Price</th> 
-      <th>Total Value</th> 
-      <th>Symbol</th>
-      <th>Cost per</th>
-      <th>Amount owned</th>
+      <th>Rank</th>
+      <th>1 Hr %</th>
+      <th>24 Hr %</th>
+      <th>7 Day %</th>      
+      <th>Current Value</th> 
+      <th>Total Paid</th>
+      <th>Profit/Loss</th>
+      <th>Cost Paid Per</th>
+      <th>Amount Owned</th>
     </tr>
   </thead>
 
@@ -23,11 +28,17 @@
               <% if crypto.symbol == x["symbol"] %> 
                 <td><%= link_to x["name"], crypto %></td>  
                 <td>$<%= x["price_usd"] %></td>  
-                <td>$<%= x["price_usd"].to_d * crypto.amount_owned %></td>     
+                <td><%= x["rank"] %></td>  
+                <td><%= x["percent_change_1h"] %>%</td>  
+                <td><%= x["percent_change_24h"] %>%</td>  
+                <td><%= x["percent_change_7d"] %>%</td>  
+                <td>$<%= x["price_usd"].to_d * crypto.amount_owned %></td>  
+                <td>$<%= crypto.cost_per * crypto.amount_owned %></td>
+                <td>$<%= (x["price_usd"].to_d * crypto.amount_owned) - (crypto.cost_per * crypto.amount_owned) %></td>  
+                <% @profit_loss += (x["price_usd"].to_d * crypto.amount_owned) - (crypto.cost_per * crypto.amount_owned) %>
               <% end %>
         <% end %>
 
-        <td><%= crypto.symbol %></td>
         <td>$<%= crypto.cost_per %></td>
         <td><%= crypto.amount_owned %></td>
       </tr>
@@ -37,5 +48,8 @@
 </table>
 
 <br>
+
+<strong>Portfolio Profit/Loss <strong><%= number_to_currency(@profit_loss) %>
+<br><br>
 
 <%= link_to 'New Crypto', new_crypto_path, class: "btn btn-default" %>
