--- a/app/views/cryptos/show.html.erb
+++ b/app/views/cryptos/show.html.erb
@@ -1,15 +1,25 @@
-<p id="notice"><%= notice %></p>
+<% for x in @show_crypto %>
+    <% if @crypto.symbol.upcase == x["symbol"] %> 
+      <% crypto_name = x["name"] %>
+      <% crypto_price = x["price_usd"] %><br>
+      <% crypto_rank = x["rank"] %>
+    <% end %>
+<% end %>
 
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%= crypto_name %></h3>
+  </div>
+  <div class="panel-body">
+
+  <h2><%= @crypto.symbol.upcase %></h2>
+  <br>
 <p>
-  <strong>Symbol:</strong>
-  <%= @crypto.symbol %>
+  <strong>Current Price: </strong> <%= crypto_price  %>
 </p>
-
 <p>
-  <strong>User:</strong>
-  <%= @crypto.user_id %>
+  <strong>Rank: </strong> <%= crypto_rank  %>
 </p>
-
 <p>
   <strong>Cost per:</strong>
   <%= @crypto.cost_per %>
@@ -19,7 +29,11 @@
   <strong>Amount owned:</strong>
   <%= @crypto.amount_owned %>
 </p>
+</div>
+  <div class="panel-footer">
+    <%= link_to 'Edit', edit_crypto_path(@crypto) %> |
+    <%= link_to 'Back', cryptos_path %> |
+    <%= link_to 'Destroy', crypto_path(@crypto), method: :delete, data: { confirm: 'Are you sure?' } %> |
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_crypto_path(@crypto) %> |
-<%= link_to 'Back', cryptos_path %> |
-<%= link_to 'Destroy', crypto_path(@crypto), method: :delete, data: { confirm: 'Are you sure?' } %> |
