--- a/app/views/home/lookup.html.erb
+++ b/app/views/home/lookup.html.erb
@@ -1,8 +1,8 @@
-<h3>Crypto Currency Lookup</h3>
+<h3>Cryptocurrency Lookup</h3>
 <br>
 
 <%= form_tag home_lookup_path, :method => 'POST' do %>
-  <%= text_field_tag 'sym', nil, placeholder: 'Enter Crypto Symbol', size: 50 %>
+  <%= text_field_tag 'sym', nil, placeholder: 'Enter Symbol', size: 50 %>
   <%= submit_tag 'Lookup Stock Quote' %>
 <% end %>
 
